<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/alert_dark_frame"
    tools:context=".MainScreen">

    <TextView
        android:id="@+id/AverageTemperature"
        android:layout_width="377dp"
        android:layout_height="407dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="23dp"
        android:text="@string/TextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/NEXT"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/NEXT"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="136dp"
        android:text="@string/Enter"
        app:layout_constraintBottom_toTopOf="@+id/AverageTemperature"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/input"
        android:layout_width="265dp"
        android:layout_height="54dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Name"
        android:autofillHints="Weather"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CLEAR"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="75dp"
        android:text="@string/Clear"
        app:layout_constraintBottom_toTopOf="@+id/AverageTemperature"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/EXIT"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="32dp"
        android:text="@string/EXIT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>